# Futebol_Api

./: pyproject.toml
futebol_api/: api_requests.py  database.py
tests/: test_futebol_api.py
